tests/baselines/reference/classExpressionWithDecorator1.errors.txt
classExpressionWithDecorator1.ts(1,9): error TS1206: Decorators are not valid here.


==== classExpressionWithDecorator1.ts (1 errors) ====
    var v = @decorate class C { static p = 1 };
            ~
!!! error TS1206: Decorators are not valid here.